--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "react-cookie": "^4.0.3"
   }
 }
